# Leaderboards

./: .breakpoints  .gitignore  .replit  README.md  README.rst  help.py  main.py  pb_list.json  pyproject.toml  replit.nix  requirements.txt  steam_id.json  steamlb.py  storage.py  updatetime.json
FierceLeopard/: README.rst  pyproject.toml
FierceLeopard/FierceLeopard/: Entry.py  Leaderboard.py  Logger.py  Ranker.py  Utils.py  __init__.py
FierceLeopard/Tests/: Test_Ranker.py
FierceLeopard/Tests/Data/: nicknames.json  sp_a1_intro4.json  steam_ids.json
Leaderboards/: .maps.json  AMC.json  CustomHelp.py  Logger.py  Main.py  SteamLeaderboards.py  Storage.py  Utils.py  glitchless.json  inboundNoSla.json  mp_coop_2paints_1bridge.json  mp_coop_bridge_catch.json  mp_coop_catapult_1.json  mp_coop_catapult_2.json  mp_coop_catapult_catch.json  mp_coop_catapult_wall_intro.json  mp_coop_come_along.json  mp_coop_doors.json  mp_coop_fan.json  mp_coop_fling_1.json  mp_coop_fling_3.json  mp_coop_fling_crushers.json  mp_coop_infinifling_train.json  mp_coop_laser_2.json  mp_coop_laser_crusher.json  mp_coop_laser_tbeam.json  mp_coop_multifling_1.json  mp_coop_paint_bridge.json  mp_coop_paint_come_along.json  mp_coop_paint_conversion.json  mp_coop_paint_crazy_box.json  mp_coop_paint_longjump_intro.json  mp_coop_paint_rat_maze.json  mp_coop_paint_red_racer.json  mp_coop_paint_redirect.json  mp_coop_paint_speed_catch.json  mp_coop_paint_speed_fling.json  mp_coop_paint_walljumps.json  mp_coop_race_2.json  mp_coop_rat_maze.json  (+81 more)
Leopard Bot/: Logger.py  Main.py  Utils.py
Maps/: Maps.json
Scripts/: Setup.bat  Start.bat  Tests.bat
Tests/: Setup.py  Test_Leaderboards.py
Tests/Data/: nicknames.json  sp_a1_intro4.json  steam_ids.json
dependencies/: help.py
dependencies/Leaderboards/: .maps.json
