[tool.poetry]
name = "Leaderboard Bot"
version = "1.2.0"
description = "A leaderboard bot for discord. Leaderbot accesses steam leaderboards to auto-update leaderboards for all discord server's"
authors = ["GalacticKittenSS [@GalacticKitten]"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
requests = "^2.25.1"
Flask = "^2.0.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
