[tool.poetry]
name = "Leaderboards"
version = "1.3.1"
description = ""
authors = ["GalacticKittenSS <@GalacticKitten>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
Flask = "^2.2.0"
bs4 = "^0.0.1"
discord = "^2.0.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
